# air-overhead

./: .dockerignore  .gitignore  AUTO_DETECTION_README.md  DOCKER_README.md  Dockerfile  LICENSE  MANIFEST.in  NAS_SETUP_GUIDE.md  README.md  __init__.py  app.py  auto_detection.py  credentials.json.example  credentialsold.json  deploy-to-nas.sh  docker-build.bat  docker-build.sh  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  enhanced.html  enhanced_v1_working.html  enhanced_v2_dev.html  index.html  install.bat  install.sh  pyproject.toml  run.py  setup.py  start_auto_detection.bat  start_auto_detection.py  start_auto_detection.sh  test_aircraft_data.py  test_vestaboard_integration.py  vestaREADME.md  vestaboard_api.py  vestaboard_config.json.example
